Fix small css alignment bug in hero

--- a/app/globals.css
+++ b/app/globals.css
@@ -129,11 +129,11 @@
   }
 
   .section-container {
-    @apply mx-[10%] px-10 pt-10 h-fit pb-20;
+    @apply mx-auto px-6 lg:px-10 pt-10 h-fit pb-20 max-w-7xl;
   }
 
   .content-width {
-    @apply sm:w-1/2 w-full;
+    @apply w-full lg:w-[45%] max-w-2xl;
   }
 
   /* Spacing Bosons */
@@ -205,7 +205,7 @@
 
 /* Hero custom media queries */
 
-@media (max-width: 1200px) {
+@media (max-width: 1280px) {
   .custom-text-align {
     @apply text-center items-center;
   }
@@ -218,7 +218,7 @@
   }
 }
 
-@media (min-width: 1201px) {
+@media (min-width: 1280px) {
   .custom-text-align {
     @apply text-left items-start;
   }
